@@ -76,7 +76,7 @@ import vavi.util.RegexFileFilter;
 
 /**
  * のメインモジュールです．
- * 
+ *
  * @depends ${JDK_HOME}/lib/dt.jar
  * @depends ./EditablePanelResource${I18N}.properties
  * 
@@ -121,7 +121,7 @@ public class EditablePanel extends JComponent {
         container.setBackground(Color.white);
 
         // self
-        ((JComponent) container).setPreferredSize(container.getSize());
+        container.setPreferredSize(container.getSize());
         this.setLayout(new BorderLayout());
         this.add(container, BorderLayout.CENTER);
         this.addEditorListener(el); // < sel,file,setEd
@@ -896,7 +896,7 @@ Debug.println("save: " + file);
     private Action showManualAction = new AbstractAction(rb.getString("action.showManual"), (ImageIcon) UIManager.get("editablePanel.showManualIcon")) {
         public void actionPerformed(ActionEvent ev) {
             try {
-                Runtime.getRuntime().exec(props.getProperty("ep.path.browser") + " " + props.getProperty("ep.url.manual"));
+                Runtime.getRuntime().exec(new String[] {props.getProperty("ep.path.browser"), props.getProperty("ep.url.manual")});
             } catch (Exception e) {
                 Debug.println(Level.SEVERE, "Cannot show the manual: " + e);
             }
@@ -960,7 +960,7 @@ Debug.println("save: " + file);
                 key = "ep.action." + i + ".icon";
                 String icon = props.getProperty(key);
 
-Debug.println("icon: " + icon);
+Debug.println(Level.FINE, "icon: " + icon);
                 table.put(val, new ImageIcon(t.getImage(c.getResource(icon))));
 
                 i++;
@@ -968,9 +968,8 @@ Debug.println("icon: " + icon);
 
             path = "/toolbarButtonGraphics/development/Bean24.gif";
             table.put("ep.beanWrapperIcon", t.getImage(c.getResource(path)));
-        } catch (Exception e) {
-            Debug.printStackTrace(e);
-            System.exit(1);
+        } catch (IOException e) {
+            throw new IllegalStateException(e);
         }
     }
 
